.ci/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: massive-attack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: massive-attack
  template:
    metadata:
      labels:
        app: massive-attack
    spec:
      containers:
        - name: massive-attack
          image: inseefr/massive-attack:1.0.5
