.ci/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: massive-attack
spec:
  ports:
    - name: http
      targetPort: 8080
      port: 8080
  selector:
    app: massive-attack
